<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/grayBackground"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/whatsapp"
            android:contentDescription="@string/whats_up_image"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/tv_clickForSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/click_for_sign_up" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/sign_in"
            app:cornerRadius="4dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/google"
                android:padding="15dp"
                android:text="Google"
                android:textColor="@color/black"
                app:cornerRadius="4dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/fb_color"
                android:drawableStart="@drawable/facebook"
                android:padding="15dp"
                android:text="Facebook"
                app:cornerRadius="4dp" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_signupWithPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with_phone"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="15dp"
            />
    </LinearLayout>
</LinearLayout>